--- a/site/index.html
+++ b/site/index.html
@@ -60,7 +60,7 @@
 
 					<h5>Get company data by industry</h5>
 					<code>
-						stock.companies( ['gold', 'personal_computers'] )
+						stocker.companies( ['gold', 'personal_computers'] )
 					</code>
 
 					<h5>View available quote properties, industries and companies</h5>
